--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: home
-title: Hello Juh
-background: "/img/banner_home4.jpg"
+title: Kevin K. Takano
+background: "/img/background.jpg"
 ---
